testsuite/poke.pkl/printf-diag-25.pk
/* { dg-do compile } */

printf ("%f64o", 1U); /* { dg-error "" } */
